--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@ footer {
           App Store
         </a>
         <a href="https://play.google.com/store/apps/details?id=com.gymauslastung" target="_blank" class="store-btn">
-          <svg viewBox="0 0 24 24" fill="currentColor"><path d="M3.18 23.67c-.37-.2-.68-.56-.82-1.04L13.04 12 2.36 1.37C2.52.9 2.82.53 3.18.33L14.46 12 3.18 23.67zm11.28-11.67L16.62 14l-1.74 1.74L3.46 23.4 14.46 12zm1.92-1.92L14.46 12 3.46.6l11.42 7.66L16.62 10l-.24.08zM20.16 10.65c.72.41 1.08.93 1.08 1.35 0 .42-.36.94-1.08 1.35L17.16 14l-2.1-2L17.16 10l3-1.35z"/></svg>
+          <svg viewBox="0 0 24 24" fill="currentColor"><path d="M4 2.5v19c0 .83.91 1.34 1.6.9l15.2-9.5c.67-.42.67-1.38 0-1.8L5.6 1.6C4.91 1.16 4 1.67 4 2.5z"/></svg>
           Google Play
         </a>
       </div>
@@ -535,7 +535,7 @@ footer {
           App Store
         </a>
         <a href="https://play.google.com/store/apps/details?id=com.yp.tatbestandskatalog" target="_blank" class="store-btn">
-          <svg viewBox="0 0 24 24" fill="currentColor"><path d="M3.18 23.67c-.37-.2-.68-.56-.82-1.04L13.04 12 2.36 1.37C2.52.9 2.82.53 3.18.33L14.46 12 3.18 23.67zm11.28-11.67L16.62 14l-1.74 1.74L3.46 23.4 14.46 12zm1.92-1.92L14.46 12 3.46.6l11.42 7.66L16.62 10l-.24.08zM20.16 10.65c.72.41 1.08.93 1.08 1.35 0 .42-.36.94-1.08 1.35L17.16 14l-2.1-2L17.16 10l3-1.35z"/></svg>
+          <svg viewBox="0 0 24 24" fill="currentColor"><path d="M4 2.5v19c0 .83.91 1.34 1.6.9l15.2-9.5c.67-.42.67-1.38 0-1.8L5.6 1.6C4.91 1.16 4 1.67 4 2.5z"/></svg>
           Google Play
         </a>
       </div>
