--- a/index.html
+++ b/index.html
@@ -742,8 +742,8 @@ footer {
 
 <div class="tech-strip">
   <div class="tech-track">
-    <span class="tech-item">iOS</span><span class="tech-item">Android</span><span class="tech-item">Swift</span><span class="tech-item">Flutter</span><span class="tech-item">Mobile Design</span><span class="tech-item">App Store</span><span class="tech-item">Google Play</span><span class="tech-item">UI/UX</span>
-    <span class="tech-item">iOS</span><span class="tech-item">Android</span><span class="tech-item">Swift</span><span class="tech-item">Flutter</span><span class="tech-item">Mobile Design</span><span class="tech-item">App Store</span><span class="tech-item">Google Play</span><span class="tech-item">UI/UX</span>
+    <span class="tech-item">iOS</span><span class="tech-item">Android</span><span class="tech-item">Swift</span><span class="tech-item">Mobile Design</span><span class="tech-item">App Store</span><span class="tech-item">Google Play</span><span class="tech-item">UI/UX</span>
+    <span class="tech-item">iOS</span><span class="tech-item">Android</span><span class="tech-item">Swift</span><span class="tech-item">Mobile Design</span><span class="tech-item">App Store</span><span class="tech-item">Google Play</span><span class="tech-item">UI/UX</span>
   </div>
 </div>
 
