--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@ footer {
 <section id="about">
   <div class="about-content">
     <div class="section-eyebrow" data-animate>Über mich</div>
-    <div class="section-headline" data-animate>Hallo, ich bin <span style="background:linear-gradient(90deg,#2997ff,#5ac8fa);-webkit-background-clip:text;-webkit-text-fill-color:transparent;">Yp!</span></div>
+    <div class="section-headline" data-animate>Hallo, ich bin <span style="background:linear-gradient(90deg,#2997ff,#5ac8fa);-webkit-background-clip:text;-webkit-text-fill-color:transparent;">Yacouba!</span></div>
     <p class="about-text" data-animate>
       Ich bin <strong>Indie App Developer</strong> aus Deutschland und baue <em>mobile Apps</em>, die echte Probleme lösen. Von Fitness über Recht bis hin zu Games — ich liebe es, Ideen in <strong>polierte Produkte</strong> zu verwandeln.
     </p>
