Replace GymTime with GymRadar in index.html

--- a/index.html
+++ b/index.html
@@ -639,8 +639,8 @@ footer {
   <div class="apps-grid">
 
     <div class="app-card" data-card>
-      <div class="app-icon"><img src="gymtime.png" alt="GymTime"></div>
-      <div class="app-name">GymTime</div>
+      <div class="app-icon"><img src="gymradar.png" alt="GymRadar"></div>
+      <div class="app-name">GymRadar</div>
       <div class="app-desc">Live-Auslastung deines Fitnessstudios — immer wissen, wann der beste Zeitpunkt zum Trainieren ist.</div>
       <div class="app-links">
         <a href="https://apps.apple.com/us/app/gymtime-live-auslastung/id6758906348" target="_blank" class="store-btn">
