index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -779,8 +779,7 @@ footer {
     <h3>Verantwortlich</h3>
     <p>
       Yacouba Pfälzner<br>
-      Ehrenbergstraße 17<br>
-      14195 Berlin<br>
+      Berlin<br>
       Deutschland
     </p>
     <h3>Kontakt</h3>
@@ -803,7 +802,7 @@ footer {
     <h3>1. Verantwortlicher</h3>
     <p>
       Yacouba Pfälzner<br>
-      Ehrenbergstraße 17, 14195 Berlin<br>
+      Berlin<br>
       E-Mail: developeryp1@gmail.com
     </p>
 
